# mcpscope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  opencode.jsonc  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  scan.yml
mcpscope/: cli.py  config.py  main.py  scanner.py  webhooks.py
mcpscope/api/: routes.py  server.py
mcpscope/ingest/: __init__.py  base.py  cisco_a2a.py  cisco_mcp.py  mcpscan.py  mcpwn.py  sarif.py
mcpscope/models/: __init__.py  finding.py  scan.py  security_event.py
mcpscope/storage/: store.py
mcpscope/templates/: dashboard.html  login.html
tests/: test_http.py  test_parsers.py
tests/fixtures/: cisco-a2a.json  cisco-mcp.json  mcpscan.json  mcpwn.json  sarif.json
